--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,17 +3,16 @@ meta:
   language: en              # text language, the value is HTML lang attribute value, default is "en"
 
 basic:
-  name: Foo Bar                      # name
-  title: Backend Developer           # job title
+  name: Seán Glennon                      # name
+  title: Senior Program Manager           # job title
   avatar:
     show: true                       # show or hide avatar
-    path: /assets/images/profile.png # file path or link to your avatar
+    path: /assets/images/SG_Profile.jpg # file path or link to your avatar
 
 contact:
-  location: Beijing, China  # location, text or markdown link syntax
-  email: me@example.com     # email address
-  phone: +86-111-2222-3333  # phone number, the format is "+[Country Code] [Area Code (if applicable)] [Local Phone Number]"
-  website: example.com      # site link without schema, like example.com, will automatically prepend "https://"
+  location: Dublin, Ireland  # location, text or markdown link syntax
+  email: seanglennon90@gmail.com     # email address
+  phone: +353-87-918-2255  # phone number, the format is "+[Country Code] [Area Code (if applicable)] [Local Phone Number]"
 
   gender:                   # gender or pronoun
   birthday:                 # birthday
@@ -25,7 +24,7 @@ contact:
   # Please copy the <> part of the comment in the link to your profile on the relevant site and paste it here.
 
   # programming
-  github:                   # https://github.com/<username>
+  github:                   https://github.com/seang11
   gitlab:                   # https://gitlab.com/<username>
   bitbucket:                # https://bitbucket.com/<username>
   git:                      # selfhost git site link without schema "https://"
@@ -60,7 +59,7 @@ contact:
   producthunt:              # https://www.producthunt.com/@<username>
 
   # cv
-  linkedin:                 # https://linkedin.com/in/<username>
+  linkedin:                 https://linkedin.com/in/seanglennon1
   indeed:                   # https://my.indeed.com/p/<id>
   xing:                     # https://www.xing.com/profile/<username>
   fiverr:                   # https://www.fiverr.com/<username>
