--- a/_data/data.yml
+++ b/_data/data.yml
@@ -103,39 +103,32 @@ profile:
   order: 1
   title: Profile
   description: |
-    The profile section in a resume is a brief summary of the applicant's skills, qualifications, and experience. The purpose of this section is to provide a snapshot of the applicant's professional background and highlight their most relevant accomplishments and strengths. It may include information such as the applicant's career objectives, years of experience, areas of expertise, and key achievements.
+    Seán is a Senior Manager in Deloitte’s Cloud & Engineering practice with over 12 years’ experience in Microsoft Azure, DevOps transformation, software engineering, and software quality assurance including automated & manual testing. He is a subject matter expert in DevOps, Cloud Transformation including Cloud Op Model, Microsoft Azure, and public cloud platforms.
 
-    A well-crafted profile section can help to grab the attention of potential employers and encourage them to read on and learn more about the applicant's qualifications and experience.
+Seán’s core strengths include DevOps & Agile development, Azure DevOps, Cloud Technologies such as Microsoft Azure & Amazon Web Services, Database Design, Identity and Access Management, Application Lifecycle Management, and continuous build and integration. Sean has demonstrated excellent communication, mentoring and leadership skills across the projects he has worked on. His positive attitude and collaborative nature enable him to forge strong relationships with his clients and his teams.
+
 
 experience:
   show: true
   order: 2
   title: Experiences
-  description: |
-    The experiences section in a resume is a section where you list your previous work experiences and accomplishments. It typically includes information about your previous job titles, companies you worked for, the dates of your employment, and your key responsibilities and achievements in each role. This section is important because it gives potential employers a sense of your work history and the skills and expertise you have developed over time. It can also help demonstrate your ability to contribute value to a new organization based on your past achievements.
-
+  description:
   items:
-    - company: Second Company
-      link: '#'
+    - company: Deloitte Ireland
+      link: 'https://www.deloitte.com/ie/en.html'
       tags: Full-time
-      date: 2018.03 - 2019.03
-      role: Backend Developer
-      location: Beijing
-      description: |
-        Your key responsibilities and achievements in the company.
-        + First
-        + Second
+      date: 2013.09 - 2025.11
+      role: Senior Manager
+      location: Dublin, Ireland
+      description: 
 
-    - company: First Company
-      link:
-      tags: Part-time, remote
-      date: 2017.03 - 2018.03
-      role: Backend Developer
-      location: Beijing
-      description: |
-        Your key responsibilities and achievements in the company.
-        + First
-        + Second
+    - company: Accenture
+      link: https://www.accenture.com/ie-en
+      tags: Full-time
+      date: 2012.01 - 2012.09
+      role: Technology Consulting Internship
+      location: Dublin, Ireland
+      description: 
 
 project:
   show: true
